--- a/module1-solution/index.html
+++ b/module1-solution/index.html
@@ -8,7 +8,7 @@
       .message { font-size: 1.3em; font-weight: bold; }
     </style>
 
-    <script src="C:\Users\sony\coursera-projects\coursera_angular\angular.min.js"></script>
+   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js">
     <script src="app.js"></script>
   </head>
 <body ng-app="LunchCheckerApp">
